--- a/framework/snipets/categorypropertydlg.ui
+++ b/framework/snipets/categorypropertydlg.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout">
    <item row="1" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
+    <widget class="QDialogButtonBox" name="m_buttons">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
@@ -194,7 +194,7 @@
  </resources>
  <connections>
   <connection>
-   <sender>buttonBox</sender>
+   <sender>m_buttons</sender>
    <signal>accepted()</signal>
    <receiver>CategoryPropertyDialog</receiver>
    <slot>accept()</slot>
@@ -210,7 +210,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>buttonBox</sender>
+   <sender>m_buttons</sender>
    <signal>rejected()</signal>
    <receiver>CategoryPropertyDialog</receiver>
    <slot>reject()</slot>
