--- a/framework/snipets/categorypropertydlg.ui
+++ b/framework/snipets/categorypropertydlg.ui
@@ -138,7 +138,7 @@
            </widget>
           </item>
           <item row="1" column="0">
-           <spacer name="horizontalSpacer">
+           <spacer name="m_horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
