--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -1545,8 +1545,17 @@
        </item>
        <item>
         <widget class="QTreeView" name="m_snipetTreeView">
+         <property name="acceptDrops">
+          <bool>true</bool>
+         </property>
          <property name="whatsThis">
           <string>List of snipet (or template) that &lt;b&gt;XINX&lt;/b&gt; can use. A snipet is a piece of code quickly accessible by a key word, or by a menu.</string>
+         </property>
+         <property name="dragEnabled">
+          <bool>true</bool>
+         </property>
+         <property name="dragDropMode">
+          <enum>QAbstractItemView::InternalMove</enum>
          </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
