--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -27,6 +27,7 @@
 		<file>images/document-import.png</file>
 		<file>images/document-properties.png</file>
 		<file>images/draw-text.png</file>
+		<file>images/edit-clear-locationbar-rtl.png</file>
 		<file>images/edit-clear-locationbar-ltr.png</file>
 		<file>images/edit-select-all.png</file>
 		<file>images/edit.png</file>
