--- a/xinx/ui/projectdirectorywidget.ui
+++ b/xinx/ui/projectdirectorywidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>245</width>
-    <height>284</height>
+    <width>267</width>
+    <height>316</height>
    </rect>
   </property>
   <layout class="QGridLayout">
@@ -97,22 +97,8 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QToolButton" name="m_clearToolButton">
-     <property name="whatsThis">
-      <string>Clear the content of filter and restore the project directory view.</string>
-     </property>
-     <property name="text">
-      <string>Clear</string>
-     </property>
-     <property name="icon">
-      <iconset resource="../application.qrc">
-       <normaloff>:/images/edit-clear-locationbar-ltr.png</normaloff>:/images/edit-clear-locationbar-ltr.png</iconset>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="1">
-    <widget class="QLineEdit" name="m_filtreLineEdit">
+    <widget class="XinxLineEdit" name="m_filtreLineEdit">
      <property name="whatsThis">
       <string>Filter the view on files present in the project directory. (joker as * and ? can be used). When filter is actived, the view is automatically switched in flat view. When filter is cleared, the view is switched in tree view.</string>
      </property>
@@ -144,25 +130,15 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>XinxLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header location="global">xinxlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../application.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>m_clearToolButton</sender>
-   <signal>clicked()</signal>
-   <receiver>m_filtreLineEdit</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>12</x>
-     <y>61</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>75</x>
-     <y>61</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
