--- a/xinx/ui/welcomdlg.ui
+++ b/xinx/ui/welcomdlg.ui
@@ -25,15 +25,21 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" rowspan="2">
     <widget class="QFrame" name="recentProjectsFrame">
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
      <layout class="QGridLayout" name="gridLayout_5">
-      <property name="rightMargin">
-       <number>9</number>
-      </property>
       <property name="horizontalSpacing">
        <number>0</number>
       </property>
       <property name="verticalSpacing">
        <number>3</number>
+      </property>
+      <property name="rightMargin">
+       <number>9</number>
       </property>
       <item row="0" column="0" colspan="3">
        <widget class="QLabel" name="projTitleLabel">
@@ -50,6 +56,7 @@
 	&lt;/head&gt;
 	&lt;body style=&quot;font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 		&lt;span style=&quot;font-size:x-large&quot;&gt;Open Recent Project&lt;/span&gt;
+		&lt;hr/&gt;
 	&lt;/body&gt;
 &lt;/html&gt;</string>
         </property>
@@ -58,8 +65,28 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="createNewProjectButton">
+        <property name="text">
+         <string>Create New Project...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
       <item row="1" column="0" colspan="3">
-       <widget class="WelcomTreeWidget" name="projTreeWidget">
+       <widget class="WelcomTreeWidget" name="projectWidget">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -78,75 +105,24 @@
         <property name="verticalScrollMode">
          <enum>QAbstractItemView::ScrollPerPixel</enum>
         </property>
-        <property name="rootIsDecorated">
-         <bool>false</bool>
-        </property>
-        <property name="uniformRowHeights">
-         <bool>true</bool>
-        </property>
-        <property name="allColumnsShowFocus">
-         <bool>true</bool>
-        </property>
-        <property name="columnCount">
-         <number>2</number>
-        </property>
-        <attribute name="headerVisible">
-         <bool>false</bool>
-        </attribute>
-        <attribute name="headerDefaultSectionSize">
-         <number>24</number>
-        </attribute>
-        <attribute name="headerMinimumSectionSize">
-         <number>0</number>
-        </attribute>
-        <column>
-         <property name="text">
-          <string notr="true">1</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string notr="true">2</string>
-         </property>
-        </column>
        </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="createNewProjectButton">
-        <property name="focusPolicy">
-         <enum>Qt::TabFocus</enum>
-        </property>
-        <property name="text">
-         <string>Create New Project...</string>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QFrame" name="sitesFrame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
+      <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
@@ -164,6 +140,7 @@
 	&lt;/head&gt;
 	&lt;body style=&quot;font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 		&lt;span style=&quot;font-size:x-large&quot;&gt;XINX Websites&lt;/span&gt;
+		&lt;hr/&gt;
 	&lt;/body&gt;
 &lt;/html&gt;</string>
         </property>
@@ -192,37 +169,6 @@
         <property name="verticalScrollMode">
          <enum>QAbstractItemView::ScrollPerPixel</enum>
         </property>
-        <property name="rootIsDecorated">
-         <bool>false</bool>
-        </property>
-        <property name="uniformRowHeights">
-         <bool>true</bool>
-        </property>
-        <property name="allColumnsShowFocus">
-         <bool>true</bool>
-        </property>
-        <property name="columnCount">
-         <number>2</number>
-        </property>
-        <attribute name="headerVisible">
-         <bool>false</bool>
-        </attribute>
-        <attribute name="headerDefaultSectionSize">
-         <number>24</number>
-        </attribute>
-        <attribute name="headerMinimumSectionSize">
-         <number>0</number>
-        </attribute>
-        <column>
-         <property name="text">
-          <string notr="true">1</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string notr="true">2</string>
-         </property>
-        </column>
        </widget>
       </item>
      </layout>
@@ -231,10 +177,10 @@
    <item row="1" column="1">
     <widget class="QFrame" name="sitesFrame_2">
      <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
+      <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
+      <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
@@ -252,6 +198,7 @@
 	&lt;/head&gt;
 	&lt;body style=&quot;font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 		&lt;span style=&quot;font-size:x-large&quot;&gt;Did You Known ?&lt;/span&gt;
+		&lt;hr/&gt;
 	&lt;/body&gt;
 &lt;/html&gt;</string>
         </property>
@@ -285,7 +232,7 @@
  <customwidgets>
   <customwidget>
    <class>WelcomTreeWidget</class>
-   <extends>QTreeWidget</extends>
+   <extends>QListWidget</extends>
    <header>welcomdlgimpl_p.h</header>
   </customwidget>
  </customwidgets>
