--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -109,5 +109,6 @@
         <file>images/ecmascript.png</file>
         <file>rc/exceptionfilter.txt</file>
         <file>images/bullet_arrow.png</file>
+        <file>rc/tipoftheday_fr_FR.txt</file>
     </qresource>
 </RCC>
